sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: reassignment to val
      i=i+1
       ^AlgGnomeSort:19: error: reassignment to val
        i=i+1
         ^AlgGnomeSort:24: error: reassignment to val
        i=i-1
         ^